--- a/multiplexers/tmux/tmux.conf
+++ b/multiplexers/tmux/tmux.conf
@@ -1,5 +1,80 @@
+# Set terminal theme override on tmux
+# set-option -sa terminal-overrides ",xterm*:Tc"
+
+# Change directories tmux plugins managers (tpm)
+set-environment -g TMUX_PLUGIN_MANAGER_PATH "~/.config/tmux/plugins"
+
+set-option -g status-position top
+# Can use mouse & disable mouse wheel in tmux
 set -g mouse on
 bind-key -T root WheelUpPane send-keys ""   # or ^Y
 bind-key -T root WheelDownPane send-keys "" # or ^E
 bind -T root WheelUpPane if-shell -F "#{pane_in_mode}" "send-keys -M" "copy-mode -e; send-keys -M"
 bind -T root WheelDownPane if-shell -F "#{pane_in_mode}" "send-keys -M" "send-keys -M"
+
+### Keybinding
+# Set key 'r' to reload tmux
+unbind r
+bind r source-file ~/.config/tmux/tmux.conf
+# Change leader-key from C-b to C-a
+unbind C-b
+set -g prefix C-a
+bind-key C-a send-prefix
+# Change split-window
+unbind %
+bind '\' split-window -h -c '#{pane_current_path}'
+unbind '"'
+bind '=' split-window -v -c '#{pane_current_path}'
+# Set key resize
+bind -r h resize-pane -L 5
+bind -r j resize-pane -D 5
+bind -r k resize-pane -U 5
+bind -r l resize-pane -R 5
+bind -r m resize-pane -Z
+# Set key to select text in terminal & copy 
+bind-key -T copy-mode-vi 'v' send -X begin-selection
+bind-key -T copy-mode-vi 'y' send -X copy-selection
+
+### List of plugins
+set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'tmux-plugins/tmux-sensible'
+set -g @plugin 'christoomey/vim-tmux-navigator'
+set -g @plugin 'tmux-plugins/tmux-resurrect'
+
+### Theme plugins
+set -g @plugin 'catppuccin/tmux#v2.1.3'
+set -g @catppuccin_flavor 'macchiato'
+set -g @catppuccin_window_status_style "rounded"
+# Some basic mocha colors.
+set -g @ctp_bg "#24273a"
+set -g @ctp_surface_1 "#494d64"
+set -g @ctp_fg "#cad3f5"
+set -g @ctp_mauve "#c6a0f6"
+set -g @ctp_crust "#181926"
+# status line
+set -gF status-style "bg=#{@ctp_bg},fg=#{@ctp_fg}"
+# windows
+set -gF window-status-format "#[bg=#{@ctp_surface_1},fg=#{@ctp_fg}] ##I ##T "
+set -gF window-status-current-format "#[bg=#{@ctp_mauve},fg=#{@ctp_crust}] ##I ##T "
+# Make the status line pretty and add some modules
+set -g status-right-length 100
+set -g status-left-length 100
+set -g status-left ""
+set -g status-right "#{E:@catppuccin_status_application}"
+set -agF status-right "#{E:@catppuccin_status_cpu}"
+set -ag status-right "#{E:@catppuccin_status_session}"
+set -ag status-right "#{E:@catppuccin_status_uptime}"
+set -agF status-right "#{E:@catppuccin_status_battery}"
+
+
+# Start windows & pands at 1 not 0
+set -g base-index 1
+set -g pane-base-index 1
+set-window-option -g pane-base-index 1
+set-option -g renumber-windows on
+
+
+
+
+# Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
+run '~/.config/tmux/plugins/tpm/tpm'
