Update tmux.conf & .zshrc

--- a/multiplexers/tmux/tmux.conf
+++ b/multiplexers/tmux/tmux.conf
@@ -1,10 +1,11 @@
 # Set terminal theme override on tmux
-# set-option -sa terminal-overrides ",xterm*:Tc"
+ set-option -sa terminal-overrides ",xterm*:Tc"
 
 # Change directories tmux plugins managers (tpm)
 set-environment -g TMUX_PLUGIN_MANAGER_PATH "~/.config/tmux/plugins"
 
 set-option -g status-position top
+
 # Can use mouse & disable mouse wheel in tmux
 set -g mouse on
 bind-key -T root WheelUpPane send-keys ""   # or ^Y
@@ -20,11 +21,6 @@ bind r source-file ~/.config/tmux/tmux.conf
 unbind C-b
 set -g prefix C-a
 bind-key C-a send-prefix
-# Change split-window
-unbind %
-bind '\' split-window -h -c '#{pane_current_path}'
-unbind '"'
-bind '=' split-window -v -c '#{pane_current_path}'
 # Set key resize
 bind -r h resize-pane -L 5
 bind -r j resize-pane -D 5
