--- a/multiplexers/tmux/tmux.conf
+++ b/multiplexers/tmux/tmux.conf
@@ -6,36 +6,12 @@ set-environment -g TMUX_PLUGIN_MANAGER_PATH "~/.config/tmux/plugins"
 
 set-option -g status-position top
 
-# Can use mouse & disable mouse wheel in tmux
-set -g mouse on
-bind-key -T root WheelUpPane send-keys ""   # or ^Y
-bind-key -T root WheelDownPane send-keys "" # or ^E
-bind -T root WheelUpPane if-shell -F "#{pane_in_mode}" "send-keys -M" "copy-mode -e; send-keys -M"
-bind -T root WheelDownPane if-shell -F "#{pane_in_mode}" "send-keys -M" "send-keys -M"
-
-### Keybinding
-# Set key 'r' to reload tmux
-unbind r
-bind r source-file ~/.config/tmux/tmux.conf
-# Change leader-key from C-b to C-a
-unbind C-b
-set -g prefix C-a
-bind-key C-a send-prefix
-# Set key resize
-bind -r h resize-pane -L 5
-bind -r j resize-pane -D 5
-bind -r k resize-pane -U 5
-bind -r l resize-pane -R 5
-bind -r m resize-pane -Z
-# Set key to select text in terminal & copy 
-bind-key -T copy-mode-vi 'v' send -X begin-selection
-bind-key -T copy-mode-vi 'y' send -X copy-selection
-
 ### List of plugins
 set -g @plugin 'tmux-plugins/tpm'
-set -g @plugin 'tmux-plugins/tmux-sensible'
-set -g @plugin 'christoomey/vim-tmux-navigator'
+set  @plugin 'tmux-plugins/tmux-sensible'
+set  @plugin 'christoomey/vim-tmux-navigator'
 set -g @plugin 'tmux-plugins/tmux-resurrect'
+set -g @plugin 'tmux-plugins/tmux-yank'
 
 ### Theme plugins
 set -g @plugin 'catppuccin/tmux#v2.1.3'
@@ -62,15 +38,41 @@ set -ag status-right "#{E:@catppuccin_status_session}"
 set -ag status-right "#{E:@catppuccin_status_uptime}"
 set -agF status-right "#{E:@catppuccin_status_battery}"
 
+## Can use mouse & disable mouse wheel in tmux
+set -g mouse on
+bind-key -T root WheelUpPane send-keys ""   # or ^Y
+bind-key -T root WheelDownPane send-keys "" # or ^E
+bind -T root WheelUpPane if-shell -F "#{pane_in_mode}" "send-keys -M" "copy-mode -e; send-keys -M"
+bind -T root WheelDownPane if-shell -F "#{pane_in_mode}" "send-keys -M" "send-keys -M"
 
-# Start windows & pands at 1 not 0
+## Start windows & pands at 1 not 0
 set -g base-index 1
 set -g pane-base-index 1
 set-window-option -g pane-base-index 1
 set-option -g renumber-windows on
 
+### Keybinding
+## Set key 'r' to reload tmux
+unbind r
+bind r source-file ~/.config/tmux/tmux.conf
+## Change leader-key from C-b to C-a
+unbind C-b
+set -g prefix C-a
+bind-key C-a send-prefix
+# Set key resize
+bind -r h resize-pane -L 5
+bind -r j resize-pane -D 5
+bind -r k resize-pane -U 5
+bind -r l resize-pane -R 5
+bind -r m resize-pane -Z
+## Set vi-mode 
+set-window-option -g mode-keys vi
 
 
 
-# Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
+
+
+
+
+### Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.config/tmux/plugins/tpm/tpm'
