--- a/multiplexers/tmux/tmux.conf
+++ b/multiplexers/tmux/tmux.conf
@@ -8,10 +8,14 @@ set-option -g status-position top
 
 ### List of plugins
 set -g @plugin 'tmux-plugins/tpm'
-set  @plugin 'tmux-plugins/tmux-sensible'
-set  @plugin 'christoomey/vim-tmux-navigator'
+set -g @plugin 'tmux-plugins/tmux-sensible'
+set -g @plugin 'christoomey/vim-tmux-navigator'
 set -g @plugin 'tmux-plugins/tmux-resurrect'
 set -g @plugin 'tmux-plugins/tmux-yank'
+set -g @plugin 'tmux-plugins/tmux-continuum'
+
+## Setting plugins
+set -g @continuum-restore 'on'
 
 ### Theme plugins
 set -g @plugin 'catppuccin/tmux#v2.1.3'
@@ -38,13 +42,6 @@ set -ag status-right "#{E:@catppuccin_status_session}"
 set -ag status-right "#{E:@catppuccin_status_uptime}"
 set -agF status-right "#{E:@catppuccin_status_battery}"
 
-## Can use mouse & disable mouse wheel in tmux
-set -g mouse on
-bind-key -T root WheelUpPane send-keys ""   # or ^Y
-bind-key -T root WheelDownPane send-keys "" # or ^E
-bind -T root WheelUpPane if-shell -F "#{pane_in_mode}" "send-keys -M" "copy-mode -e; send-keys -M"
-bind -T root WheelDownPane if-shell -F "#{pane_in_mode}" "send-keys -M" "send-keys -M"
-
 ## Start windows & pands at 1 not 0
 set -g base-index 1
 set -g pane-base-index 1
@@ -65,9 +62,17 @@ bind -r j resize-pane -D 5
 bind -r k resize-pane -U 5
 bind -r l resize-pane -R 5
 bind -r m resize-pane -Z
-## Set vi-mode 
+## Set vi-mode & use 'v' 'y' to select and copy
 set-window-option -g mode-keys vi
-
+bind-key -T copy-mode-vi v send -X begin-selection 
+bind-key -T copy-mode-vi C-v send -X rectangle-toggle
+bind-key -T copy-mode-vi y send -X copy-selection
+## Can use mouse & disable mouse wheel in tmux
+set -g mouse on
+bind-key -T root WheelUpPane send-keys ""   # or ^Y
+bind-key -T root WheelDownPane send-keys "" # or ^E
+bind -T root WheelUpPane if-shell -F "#{pane_in_mode}" "send-keys -M" "copy-mode -e; send-keys -M"
+bind -T root WheelDownPane if-shell -F "#{pane_in_mode}" "send-keys -M" "send-keys -M"
 
 
 
