fix tmux config

--- a/multiplexers/tmux/tmux.conf
+++ b/multiplexers/tmux/tmux.conf
@@ -1,5 +1,6 @@
 # Set terminal theme override on tmux
- set-option -sa terminal-overrides ",xterm*:Tc"
+set -g default-terminal "xterm-256color"
+set-option -sa terminal-overrides ",xterm*:Tc"
 
 # Change directories tmux plugins managers (tpm)
 set-environment -g TMUX_PLUGIN_MANAGER_PATH "~/.config/tmux/plugins"
@@ -16,6 +17,7 @@ set -g @plugin 'tmux-plugins/tmux-continuum'
 
 ## Setting plugins
 set -g @continuum-restore 'on'
+# set -g @resurrect-dir '~/.config/tmux/resurrect/'
 
 ### Theme plugins
 set -g @plugin 'catppuccin/tmux#v2.1.3'
