--- a/WMs/sway/config
+++ b/WMs/sway/config
@@ -1,7 +1,3 @@
-# Default config for sway
-#
-# Copy this to ~/.config/sway/config and edit it to your liking.
-
 exec systemctl --user start NetworkManager 
 
 ### Variables
@@ -16,7 +12,7 @@ set $right l
 # Your preferred terminal emulator
 set $term wezterm
 # Your preferred application launcher
-set $menu wmenu-run
+set $menu fuzzel
 
 ### Output configuration
 #
@@ -59,7 +55,7 @@ output * bg ~/dotfiles/wallpapers/wallpaper01.jpg fill
     bindsym $mod+q kill
 
     # Start your launcher
-    bindsym $mod+d exec fuzzel --width=50
+    bindsym $mod+d exec $menu --width=50
 
     # Autostart
     exec_always --no-startup-id  nm-applet --indicator &
@@ -113,7 +109,6 @@ output * bg ~/dotfiles/wallpapers/wallpaper01.jpg fill
 #
 # Workspaces:
 #
-
     # Set name workspaces
     set $ws1 1
     set $ws2 2
@@ -137,19 +132,23 @@ output * bg ~/dotfiles/wallpapers/wallpaper01.jpg fill
     bindsym $mod+9 workspace number 9
     bindsym $mod+0 workspace number 10
     # Move focused container to workspace
-    bindsym $mod+Shift+1 move container to workspace number $ws1; workspaces $ws1
-    bindsym $mod+Shift+2 move container to workspace number $ws2; workspaces $ws2
-    bindsym $mod+Shift+3 move container to workspace number $ws3; focus $ws3
-    bindsym $mod+Shift+4 move container to workspace number $ws4; workspaces $ws4
-    bindsym $mod+Shift+5 move container to workspace number $ws5; workspaces $ws5
-    bindsym $mod+Shift+6 move container to workspace number $ws6; workspaces $ws6
-    bindsym $mod+Shift+7 move container to workspace number $ws7; workspaces $ws7
-    bindsym $mod+Shift+8 move container to workspace number $ws8; workspaces $ws8
-    bindsym $mod+Shift+9 move container to workspace number $ws9; workspaces $ws9
-    bindsym $mod+Shift+0 move container to workspace number $ws10; workspaces $ws10
+    bindsym $mod+Shift+1 move container to workspace number $ws1; workspace $ws1
+    bindsym $mod+Shift+2 move container to workspace number $ws2; workspace $ws2
+    bindsym $mod+Shift+3 move container to workspace number $ws3; workspace $ws3
+    bindsym $mod+Shift+4 move container to workspace number $ws4; workspace $ws4
+    bindsym $mod+Shift+5 move container to workspace number $ws5; workspace $ws5
+    bindsym $mod+Shift+6 move container to workspace number $ws6; workspace $ws6
+    bindsym $mod+Shift+7 move container to workspace number $ws7; workspace $ws7
+    bindsym $mod+Shift+8 move container to workspace number $ws8; workspace $ws8
+    bindsym $mod+Shift+9 move container to workspace number $ws9; workspace $ws9
+    bindsym $mod+Shift+0 move container to workspace number $ws10; workspace $ws10
     # Note: workspaces can have any name you want, not just numbers.
-    # We just use 1-10 as the default.
-#
+ 
+    # Move workspace betwwen monitors
+    bindsym $mod+Ctrl+Shift+h move workspace to output left
+    bindsym $mod+Ctrl+Shift+l move workspace to output right
+
+
 # Layout stuff:
 #
     # You can "split" the current object of your focus with
@@ -226,17 +225,7 @@ bindsym $mod+r mode "resize"
 #
 # Status Bar:
 #
-# Read `man 5 sway-bar` for more information about this section.
 bar {
-  ### The default swaybar
-    # position top
-    # status_command while date +'%Y-%m-%d %X'; do sleep 1; done
-    # colors {
-    #     statusline #ffffff
-    #     background #323232
-    #     inactive_workspace #32323200 #32323200 #5c5c5c
-    # }
-    
     swaybar_command waybar
 }
 
