--- a/multiplexers/tmux/tmux.conf
+++ b/multiplexers/tmux/tmux.conf
@@ -3,7 +3,7 @@ set -g default-terminal "xterm-256color"
 set-option -sa terminal-overrides ",xterm*:Tc"
 
 # Change directories tmux plugins managers (tpm)
-set-environment -g TMUX_PLUGIN_MANAGER_PATH "~/.config/tmux/plugins"
+set-environment -g TMUX_PLUGIN_MANAGER_PATH "$HOME/dotfiles/multiplexers/tmux/plugins"
 
 set-option -g status-position top
 
@@ -17,7 +17,10 @@ set -g @plugin 'tmux-plugins/tmux-continuum'
 
 ## Setting plugins
 set -g @continuum-restore 'on'
-# set -g @resurrect-dir '~/.config/tmux/resurrect/'
+set -g @continuum-save-on-detach 'on'
+set -g @continuum-save-interval '0'
+set -g @resurrect-dir '$HOME/dotfiles/multiplexers/tmux/resurrect/'
+set -g @resurrect-save-mode 'single'
 
 ### Theme plugins
 set -g @plugin 'catppuccin/tmux#v2.1.3'
@@ -69,6 +72,9 @@ set-window-option -g mode-keys vi
 bind-key -T copy-mode-vi v send -X begin-selection 
 bind-key -T copy-mode-vi C-v send -X rectangle-toggle
 bind-key -T copy-mode-vi y send -X copy-selection
+## Split in CWD
+bind '"' split-window -v -c "#{pane_current_path}"
+bind '%' split-window -h -c "#{pane_current_path}"
 ## Can use mouse & disable mouse wheel in tmux
 set -g mouse on
 bind-key -T root WheelUpPane send-keys ""   # or ^Y
