Config yasb && add kanata keymap

--- a/windows/gitbash/.gitconfig
+++ b/windows/gitbash/.gitconfig
@@ -3,3 +3,5 @@
 	email = 21520808@ms.uit.edu.vn
 [core]
 	editor = \"D:\\Application\\Microsoft VS Code\\bin\\code\" --wait
+[safe]
+	directory = D:/Xplat/dotfiles
