--- a/windows/.glzr/glazewm/config.yaml
+++ b/windows/.glzr/glazewm/config.yaml
@@ -2,12 +2,13 @@ general:
   # Commands to run when the WM has started. This is useful for running a
   # script or launching another application.
   # Example: The below command launches Zebar.
-  startup_commands: ['shell-exec zebar']
+  # startup_commands: ['shell-exec zebar']
+  startup_commands: []
 
   # Commands to run just before the WM is shutdown.
   # Example: The below command kills Zebar.
-  shutdown_commands: ['shell-exec taskkill /IM zebar.exe /F']
-
+  # shutdown_commands: ['shell-exec taskkill /IM zebar.exe /F']
+  shutdown_commands: []
   # Commands to run after the WM config is reloaded.
   config_reload_commands: []
 
@@ -48,7 +49,7 @@ gaps:
 
   # Gap between windows and the screen edge.
   outer_gap:
-    top: '42px'
+    top: '3px'
     right: '3px'
     bottom: '3px'
     left: '3px'
@@ -59,8 +60,8 @@ window_effects:
     # Highlight the window with a colored border.
     # ** Exclusive to Windows 11 due to API limitations.
     border:
-      enabled: true
-      color: '#8dbcff'
+      enabled: false
+      color: '#6AECF0'
 
     # Remove the title bar from the window's frame. Note that this can
     # cause rendering issues for some applications.
@@ -70,7 +71,7 @@ window_effects:
     # Change the corner style of the window's frame.
     # ** Exclusive to Windows 11 due to API limitations.
     corner_style:
-      enabled: false
+      enabled: true
       # Allowed values: 'square', 'rounded', 'small_rounded'.
       style: 'square'
 
@@ -79,21 +80,21 @@ window_effects:
       enabled: false
       # Can be something like '95%' or '0.95' for slightly transparent windows.
       # '0' or '0%' is fully transparent (and, by consequence, unfocusable).
-      opacity: '90%'
+      opacity: '95%'
 
   # Visual effects to apply to non-focused windows.
   other_windows:
     border:
-      enabled: true
+      enabled: false
       color: '#a1a1a1'
     hide_title_bar:
-      enabled: false
+      enabled: true
     corner_style:
-      enabled: false
+      enabled: true
       style: 'square'
     transparency:
-      enabled: false
-      opacity: '0%'
+      enabled: true
+      opacity: '94%'
 
 window_behavior:
   # New windows are created in this state whenever possible.
@@ -119,17 +120,6 @@ window_behavior:
       # Whether to show fullscreen windows as always on top.
       shown_on_top: false
 
-workspaces:
-  - name: '1'
-  - name: '2'
-  - name: '3'
-  - name: '4'
-  - name: '5'
-  - name: '6'
-  - name: '7'
-  - name: '8'
-  - name: '9'
-
 window_rules:
   - commands: ['ignore']
     match:
@@ -153,6 +143,21 @@ window_rules:
         window_class: { not_regex: 'OpusApp' }
       - window_process: { equals: 'POWERPNT' }
         window_class: { not_regex: 'PPTFrameClass' }
+  - commands: ['set-floating']
+    match:
+      - window_process: { equals: 'QuickLook'}
+  - commands: ['move --workspace 5']
+    match: 
+      - window_title: { regex: '.*Anki.*'}
+  - commands: ['move --workspace n', 'focus --workspace n']
+    match:
+      - window_process: { equals: 'Obsidian'}
+  - commands: ['move --workspace c', 'focus --workspace c']
+    match:
+      - window_process: { equals: 'Code'}
+  - commands: ['move --workspace t', 'focus --workspace t']
+    match:
+      - window_process: { equals: 'WindowsTerminal'}
 
 binding_modes:
   # When enabled, the focused window can be resized via arrow keys or HJKL.
@@ -169,6 +174,20 @@ binding_modes:
       # Press enter/escape to return to default keybindings.
       - commands: ['wm-disable-binding-mode --name resize']
         bindings: ['escape', 'enter']
+
+workspaces:
+  - name: '1'
+  - name: '2'
+  - name: '3'
+  - name: '4'
+  - name: '5'
+  - name: '6'
+  - name: 'n'
+    display_name: "Notes"
+  - name: 't'
+    display_name: "Terminal"
+  - name: 'c'
+    display_name: "Code"
 
 keybindings:
   # Shift focus in a given direction.
@@ -219,7 +238,7 @@ keybindings:
 
   # Change focus from tiling windows -> floating -> fullscreen.
   - commands: ['wm-cycle-focus']
-    bindings: ['alt+space']
+    # bindings: ['alt+space']
 
   # Change the focused window to be floating.
   - commands: ['toggle-floating --centered']
@@ -227,7 +246,7 @@ keybindings:
 
   # Change the focused window to be tiling.
   - commands: ['toggle-tiling']
-    bindings: ['alt+t']
+    bindings: ['alt+y']
 
   # Change the focused window to be fullscreen.
   - commands: ['toggle-fullscreen']
@@ -239,7 +258,7 @@ keybindings:
 
   # Close focused window.
   - commands: ['close']
-    bindings: ['alt+shift+q']
+    bindings: ['alt+q']
 
   # Kill GlazeWM process safely.
   - commands: ['wm-exit']
@@ -251,7 +270,7 @@ keybindings:
 
   # Redraw all windows.
   - commands: ['wm-redraw']
-    bindings: ['alt+shift+w']
+    bindings: ['alt+w']
 
   # Launch CMD terminal. Alternatively, use `shell-exec wt` or
   # `shell-exec %ProgramFiles%/Git/git-bash.exe` to start Windows
@@ -261,13 +280,13 @@ keybindings:
 
   # Focus the next/previous active workspace defined in `workspaces` config.
   - commands: ['focus --next-active-workspace']
-    bindings: ['alt+s']
+    bindings: ['alt+d']
   - commands: ['focus --prev-active-workspace']
     bindings: ['alt+a']
 
   # Focus the workspace that last had focus.
   - commands: ['focus --recent-workspace']
-    bindings: ['alt+d']
+    bindings: ['alt+s']
 
   # Change focus to a workspace defined in `workspaces` config.
   - commands: ['focus --workspace 1']
@@ -282,21 +301,21 @@ keybindings:
     bindings: ['alt+5']
   - commands: ['focus --workspace 6']
     bindings: ['alt+6']
-  - commands: ['focus --workspace 7']
-    bindings: ['alt+7']
-  - commands: ['focus --workspace 8']
-    bindings: ['alt+8']
-  - commands: ['focus --workspace 9']
-    bindings: ['alt+9']
+  - commands: ['focus --workspace n']
+    bindings: ['alt+n']
+  - commands: ['focus --workspace t']
+    bindings: ['alt+t']
+  - commands: ['focus --workspace c']
+    bindings: ['alt+c']
 
   # Move the focused window's parent workspace to a monitor in a given
   # direction.
   - commands: ['move-workspace --direction left']
     bindings: ['alt+shift+a']
   - commands: ['move-workspace --direction right']
-    bindings: ['alt+shift+f']
-  - commands: ['move-workspace --direction up']
     bindings: ['alt+shift+d']
+  - commands: ['move-workspace --direction up']
+    bindings: ['alt+shift+w']
   - commands: ['move-workspace --direction down']
     bindings: ['alt+shift+s']
 
@@ -313,9 +332,9 @@ keybindings:
     bindings: ['alt+shift+5']
   - commands: ['move --workspace 6', 'focus --workspace 6']
     bindings: ['alt+shift+6']
-  - commands: ['move --workspace 7', 'focus --workspace 7']
-    bindings: ['alt+shift+7']
-  - commands: ['move --workspace 8', 'focus --workspace 8']
-    bindings: ['alt+shift+8']
-  - commands: ['move --workspace 9', 'focus --workspace 9']
-    bindings: ['alt+shift+9']
+  - commands: ['move --workspace n', 'focus --workspace n']
+    bindings: ['alt+shift+n']
+  - commands: ['move --workspace t', 'focus --workspace t']
+    bindings: ['alt+shift+t']
+  - commands: ['move --workspace c', 'focus --workspace c']
+    bindings: ['alt+shift+c']
