--- a/tools/fuzzel/fuzzel.ini
+++ b/tools/fuzzel/fuzzel.ini
@@ -1,6 +1,16 @@
 [dmenu]
-# căn giữa màn hình
+# Location is center
 horizontal=center
 vertical=center
 width=30
 
+[border]
+        radius=8
+[colors]
+        background="#1d2021ff"
+        text="#928374ff"
+        selection="#3c3836ff"
+        selection-text="#1d2021ff"
+        match="#83a598ff"
+        selection-match="#ebdbb2ff"
+        border="#d79921ff"
