--- a/WMs/sway/config
+++ b/WMs/sway/config
@@ -32,19 +32,28 @@ output * bg ~/dotfiles/wallpapers/wallpaper01.jpg fill
 
 ### Input configuration
 #
-# Example configuration:
-#
-#   input "2:14:SynPS/2_Synaptics_TouchPad" {
-#       dwt enabled
-#       tap enabled
-#       natural_scroll enabled
-#       middle_emulation enabled
-#   }
+input "1267:35:Elan_Touchpad" {
+    tap enabled               # tap-to-click
+    tap_button_map lrm        # tap 1=left, 2=right, 3=middle
+
+    natural_scroll enabled    # revert scroll
+    scroll_method two_finger  # scroll by 2 fingers
+
+    pointer_accel 0.3         # spped cursor
+    accel_profile adaptive    # profile speedup
+
+    dwt enabled               # disable-while-typing
+
+    middle_emulation enabled  # nhấn 2 ngón = nút giữa
+
+    click_method button_areas # dùng 2 vùng click vật lý ThinkPad
+}
 #
 # You can get the names of your inputs by running: swaymsg -t get_inputs
-# Read `man 5 sway-input` for more information about this section.
 
 ### Key bindings
+# Screenshot
+    bindsym $mod+Shift+s exec grim -g "$(slurp)" - | wl-copy
 #
 # Basics:
 #
@@ -55,7 +64,10 @@ output * bg ~/dotfiles/wallpapers/wallpaper01.jpg fill
     bindsym $mod+q kill
 
     # Start your launcher
-    bindsym $mod+d exec $menu --width=50
+    bindsym $mod+space exec $menu --width=50
+
+    # Open File Explorer (Dolphin)
+    bindsym $mod+e exec dolphin
 
     # Autostart
     exec_always --no-startup-id  nm-applet --indicator &
@@ -68,6 +80,7 @@ output * bg ~/dotfiles/wallpapers/wallpaper01.jpg fill
     # mouse button for dragging.
     floating_modifier $mod normal
     focus_follows_mouse no
+    for_window [floating] border normal
 
     # Reload the configuration file
     bindsym $mod+Shift+r reload
@@ -79,9 +92,15 @@ output * bg ~/dotfiles/wallpapers/wallpaper01.jpg fill
     titlebar_border_thickness 0
     for_window [title="^.*"] title_format ""
     hide_edge_borders smart
+    # # Firefox
+    # for_window [class="firefox" title="^$"] border none
+    # for_window [app_id="firefox"] titlebar false
+    # # Brave
+    # for_window [app_id="brave-browser"] titlebar false
 
     # Exit sway (logs you out of your Wayland session)
     bindsym $mod+Shift+q exec swaynag -t warning -m 'You pressed the exit shortcut. Do you really want to exit sway? This will end your Wayland session.' -B 'Yes, exit sway' 'swaymsg exit'
+
 #
 # Moving around:
 #
@@ -106,6 +125,7 @@ output * bg ~/dotfiles/wallpapers/wallpaper01.jpg fill
     bindsym $mod+Shift+Down move down
     bindsym $mod+Shift+Up move up
     bindsym $mod+Shift+Right move right
+
 #
 # Workspaces:
 #
@@ -148,7 +168,7 @@ output * bg ~/dotfiles/wallpapers/wallpaper01.jpg fill
     bindsym $mod+Shift+a move workspace to output left
     bindsym $mod+Shift+d move workspace to output right
     bindsym $mod+Shift+w move workspace to output up
-    bindsym $mod+Shift+s move workspace to output down
+    # bindsym $mod+Shift+s move workspace to output down
 
 
 # Layout stuff:
@@ -159,9 +179,9 @@ output * bg ~/dotfiles/wallpapers/wallpaper01.jpg fill
     bindsym $mod+v splitv
 
     # Switch the current container between different layout styles
-    bindsym $mod+s layout stacking
-    bindsym $mod+w layout tabbed
-    bindsym $mod+e layout toggle split
+    # bindsym $mod+s layout stacking
+    bindsym $mod+t layout tabbed
+    bindsym $mod+y layout toggle split
 
     # Make the current focus fullscreen
     bindsym $mod+f fullscreen
@@ -170,10 +190,11 @@ output * bg ~/dotfiles/wallpapers/wallpaper01.jpg fill
     bindsym $mod+Shift+space floating toggle
 
     # Swap focus between the tiling area and the floating area
-    bindsym $mod+space focus mode_toggle
+    bindsym $mod+tab focus mode_toggle
 
     # Move focus to the parent container
     bindsym $mod+a focus parent
+
 #
 # Scratchpad:
 #
@@ -210,6 +231,7 @@ mode "resize" {
     bindsym Escape mode "default"
 }
 bindsym $mod+r mode "resize"
+
 #
 # Utilities:
 #
@@ -223,6 +245,25 @@ bindsym $mod+r mode "resize"
     bindsym --locked XF86MonBrightnessUp exec brightnessctl set 5%+
     # Special key to take a screenshot with grim
     bindsym Print exec grim
+
+#
+# Border:
+#
+default_border pixel 3
+default_floating_border normal
+for_window [class=".*"] corner rounding 50
+client.focused          #03ffff #03ffff #000000 #03ffff #03ffff
+client.unfocused        #00000000 #00000000 #cdd6f4 #00000000 #00000000
+client.focused_inactive #2e3440 #3b4252 #eceff4 #3b4252 #3b4252
+client.urgent           #2e3440 #bf616a #eceff4 #bf616a #bf616a
+
+
+#
+# Gap:
+#
+gaps inner 5
+gaps outer 3
+
 
 #
 # Status Bar:
