--- a/WMs/sway/config
+++ b/WMs/sway/config
@@ -17,8 +17,9 @@ set $menu fuzzel
 ### Output configuration
 #
 # Default wallpaper (more resolutions are available in /usr/share/backgrounds/sway/)
-# output * bg /usr/share/backgrounds/sway/Sway_Wallpaper_Blue_1920x1080.png fill
-output * bg ~/dotfiles/wallpapers/wallpaper01.jpg fill
+output DP-1 mode 2560x1440@75Hz
+output eDP-1 bg ~/dotfiles/wallpapers/wallpaper07.png fill
+output DP-1 bg ~/dotfiles/wallpapers/wallpaper01.jpg fill
 #
 # Example configuration:
 #
@@ -51,6 +52,15 @@ input "1267:35:Elan_Touchpad" {
 #
 # You can get the names of your inputs by running: swaymsg -t get_inputs
 
+### Set environment
+set $fcitx_env \
+    GTK_IM_MODULE=fcitx \
+    QT_IM_MODULE=fcitx \
+    XMODIFIERS=@im=fcitx \
+    SDL_IM_MODULE=fcitx \
+    GLFW_IM_MODULE=ibus
+
+
 ### Key bindings
 # Screenshot
     bindsym $mod+Shift+s exec grim -g "$(slurp)" - | wl-copy
@@ -70,8 +80,11 @@ input "1267:35:Elan_Touchpad" {
     bindsym $mod+e exec dolphin
 
     # Autostart
-    exec_always --no-startup-id  nm-applet --indicator &
-    exec_always --no-startup-id fcitx5 &
+    exec_always --no-startup-id dbus-update-activation-environment --systemd DBUS_SESSION_BUS_ADDRESS DISPLAY WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
+    exec_always --no-startup-id  nm-applet --indicator
+    exec_always export $fcitx_env
+    exec_always --no-startup-id bash -c "sleep 0.3 && fcitx5"
+    # exec_always --no-startup-id fcitx5 &
 
     # Drag floating windows by holding down $mod and left mouse button.
     # Resize them with right mouse button + $mod.
