--- a/windows/.glzr/glazewm/config.yaml
+++ b/windows/.glzr/glazewm/config.yaml
@@ -157,7 +157,7 @@ window_rules:
       - window_process: { equals: 'Code'}
   - commands: ['move --workspace t', 'focus --workspace t']
     match:
-      - window_process: { equals: 'WindowsTerminal'}
+      - window_process: { equals: 'alacritty'}
 
 binding_modes:
   # When enabled, the focused window can be resized via arrow keys or HJKL.
@@ -275,7 +275,7 @@ keybindings:
   # Launch CMD terminal. Alternatively, use `shell-exec wt` or
   # `shell-exec %ProgramFiles%/Git/git-bash.exe` to start Windows
   # Terminal and Git Bash respectively.
-  - commands: ['shell-exec wt']
+  - commands: ['shell-exec alacritty']
     bindings: ['ctrl+alt+t']
 
   # Focus the next/previous active workspace defined in `workspaces` config.
