--- a/statusbars/waybar/config
+++ b/statusbars/waybar/config
@@ -19,7 +19,7 @@
             "3": "3 <span font='Font Awesome 5 Free 14'></span>",
             "4": "4 <span font='Font Awesome 5 Free 14'></span>",
             "5": "5 <span font='Font Awesome 5 Free 14'></span>",
-            "6": "6 <span font='Font Awesome 5 Free 14'></span>",
+            "6": "6 <span font='FiraCode Nerd Font'></span>",
             "7": "7 <span font='Font Awesome 5 Free 14'></span>",
             "8": "8 <span font='Font Awesome 5 Free 14'></span>",
             "9": "9 <span font='Font Awesome 5 Free 14'></span>",
