--- a/tools/picom/picom.conf
+++ b/tools/picom/picom.conf
@@ -112,9 +112,9 @@ fade-exclude = [
 
 # {{{ corner
 corner-radius = 15;
-detect-rounded-corners = true;
+# detect-rounded-corners = true;
 rounded-corners-exclude = [
-	"window_type = 'desktop'",
+	"window_type = 'desktop'"
 ];
 # }}}
 
