update picom & hlwm

--- a/tools/picom/picom.conf
+++ b/tools/picom/picom.conf
@@ -2,7 +2,7 @@
 daemon = true;
 # glx, xrender, xr_glx_hybrid
 backend = "glx";
-vsync = true;
+vsync = false;
 detect-rounded-corners = true;
 detect-transient = true
 detect-client-leader = false
