update plugins & config NVchad

--- a/tools/picom/picom.conf
+++ b/tools/picom/picom.conf
@@ -94,7 +94,7 @@ opacity-rule = [
 # }}}
 
 # {{{ fading
-fading = true;
+fading = false;
 # fade-in-step = 0.03;
 # fade-out-step = 0.03;
 fade-in-step = 0.01;
@@ -128,7 +128,7 @@ size-transition = true
 
 # {{{ blur 
 blur: {
-  method = "kawase";
+  method = "none";
   strength = 5;
   background = false;
   background-frame = false;
